# claude-auth

./: .gitignore  AGENTS.md  README.md  claude-auth.py  pyproject.toml
claude_auth/: __init__.py  auth_button.py  auth_flow.py  claude_cli.py  cli.py  defaults.py  playwright_cli.py  processes.py  session.py  snapshots.py  urls.py
tests/: test_auth_button.py  test_auth_flow.py  test_claude_cli.py  test_cli.py  test_playwright_cli.py  test_session.py  test_snapshots.py  test_urls.py
