[project]
name = "claude-auth"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pylint==4.0.5",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 6
max-attributes = 13

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
]
